# ktx

./: .gitignore  AGENTS.md  README.md  codecov.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-policy.json  tsconfig.base.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  star-history.yml
docs/: release.md  terminology.md
docs-site/: next.config.mjs  package.json  tsconfig.json
docs-site/app/: global.css  layout.config.tsx  layout.tsx
docs-site/components/: code-block.tsx  copy-button.tsx  docs-page-actions.tsx  logo.tsx  product-mechanics.tsx  scroll-reveal.tsx  semantic-layer-flow.tsx  terminal-preview.tsx  theme-toggle.tsx
docs-site/content/: agents-setup.md
docs-site/lib/: llm-docs.ts
docs-site/tests/: docs-index-route.test.mjs  docs-search-behavior.test.mjs  product-mechanics-content.test.mjs
examples/: README.md
examples/local-warehouse/: ktx.yaml
examples/mongodb/: README.md  docker-compose.yml
examples/orbit-relationship-verification/: README.md  ktx.yaml
examples/package-artifacts/: README.md
examples/postgres-historic/: README.md
python/ktx-daemon/: pyproject.toml
python/ktx-daemon/src/ktx_daemon/: __init__.py  app.py  database_introspection.py  sql_analysis.py
python/ktx-daemon/src/ktx_daemon/telemetry/: events.schema.json
python/ktx-daemon/tests/: test_app.py  test_database_introspection.py  test_package.py  test_sql_analysis.py
python/ktx-sl/: AGENTS.md  pyproject.toml
python/ktx-sl/semantic_layer/: cli.py  generator.py  loader.py  manifest.py  planner.py
python/ktx-sl/sources/b2b_saas/: churn_risk.yaml
python/ktx-sl/sources/ecommerce/: churn_risk.yaml
python/ktx-sl/tests/: test_aggregate_locality.py  test_coverage_gaps.py  test_generator.py  test_manifest.py  test_planner.py
scripts/: build-evidence-fusion-adversarial-fixtures.mjs  build-public-npm-package.mjs  build-public-npm-package.test.mjs  build-python-runtime-wheel.mjs  build-python-runtime-wheel.test.mjs  check-boundaries.mjs  check-boundaries.test.mjs  codex-backend-live-smoke.mjs  codex-backend-live-smoke.test.mjs  conductor-scripts.test.mjs  conductor-setup.sh  examples-docs.test.mjs  installed-live-database-smoke.mjs  installed-live-database-smoke.test.mjs  local-embeddings-runtime-smoke.mjs  local-embeddings-runtime-smoke.test.mjs  package-artifacts.mjs  package-artifacts.test.mjs  public-npm-release-metadata.mjs  public-npm-release-metadata.test.mjs  publish-public-npm-package.mjs  publish-public-npm-package.test.mjs  published-package-smoke-config.mjs  published-package-smoke.mjs  published-package-smoke.test.mjs  relationship-orbit-verification.mjs  relationship-orbit-verification.test.mjs  release-readiness.test.mjs  release-workflow.test.mjs  run-ktx.mjs  run-ktx.test.mjs  semantic-release-config.cjs  semantic-release-config.test.mjs  setup-dev.test.mjs  update-public-release-version.mjs  update-public-release-version.test.mjs
spider2-specs/: README.md
spider2-specs/done/: 01-connection-scoped-wiki.md  02-verbatim-ingest-mode.md  06-scan-tolerate-broken-objects.md  07-analytics-skill-sql-craft.md  08-per-dialect-sql-syntax-notes.md  09-fan-out-safe-multi-hop-aggregation.md  10-panel-completeness-spine.md  11-time-series-window-recipes.md  12-parse-text-encoded-numbers.md  14-output-completeness-final-check.md  15-mcp-server-structured-logging.md  16-bounded-query-execution-timeout.md  18-bigquery-cross-project-datasets.md  19-durable-bounded-relationship-detection.md  (+2 more)
(+91 files in other folders)
