[project]
name = "ktx-daemon"
version = "0.12.0"
description = "Portable compute package for ktx semantic-layer operations"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "fastapi>=0.136.3",
  "ktx-sl",
  "lkml>=1.3.7",
  "numpy>=2.4.6",
  "orjson>=3.11.9",
  "pandas>=3.0.3",
  "posthog>=7.16.1",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.13.4",
  "requests>=2.34.2",
  "sqlglot>=30",
  "uvicorn[standard]>=0.48.0",
]

[project.scripts]
ktx-daemon = "ktx_daemon.__main__:main"

[project.optional-dependencies]
local-embeddings = [
  "sentence-transformers>=5.1.1",
  "torch>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/kaelio/ktx"
Repository = "https://github.com/kaelio/ktx"
Issues = "https://github.com/kaelio/ktx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ktx_daemon"]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
]

[tool.uv.sources]
ktx-sl = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
