[project]
name = "ktx-sl"
version = "0.12.0"
description = "Agent-first semantic layer engine with aggregate locality"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
  "sqlglot>=30",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/kaelio/ktx"
Repository = "https://github.com/kaelio/ktx"
Issues = "https://github.com/kaelio/ktx/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff",
  "pre-commit",
]
tpch = [
  "duckdb>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "--cov=semantic_layer --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["semantic_layer"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.",
  "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_layer"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
]
